[workspace]
members = [
	"aesm-client",
	"dcap-provider",
	"dcap-ql-sys",
	"dcap-ql",
	"enclave-runner",
	"fortanix-sgx-abi",
	"fortanix-sgx-tools",
	"report-test",
	"rs-libc",
	"sgxs",
	"sgx-isa",
	"sgxs-loaders",
	"sgxs-tools"
]

[patch.crates-io]
winapi = { git = 'https://github.com/parthsane/winapi-rs', branch="enclaveapi"}
